--- a/.github/workflows/php-ci.yml
+++ b/.github/workflows/php-ci.yml
@@ -31,6 +31,7 @@ jobs:
 
       # 4️⃣ (Opcional) Valida o composer.json e o autoload
       - name: Validar composer.json e autoload
+        working-directory: ./pocs
         run: |
           composer validate --no-check-lock
           composer dump-autoload --optimize
