--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -2,11 +2,11 @@ name: Deploy to Amazon ECS
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 permissions:
-  id-token: write   # This is required for requesting the JWT
-  contents: read    # This is required for actions/checkout
+  id-token: write # This is required for requesting the JWT
+  contents: read # This is required for actions/checkout
 
 jobs:
   deploy:
@@ -26,30 +26,33 @@ jobs:
       - name: Test AWS connection
         run: aws sts get-caller-identity
 
-     
-    # Para configuração via secrets
-    #  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    #  aws-region: ${{ env.AWS_REGION }}
+      # Para configuração via secrets
+      #  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #  aws-region: ${{ env.AWS_REGION }}
 
-    #- name: Login to Amazon ECR
-    #  id: login-ecr
-    #  uses: aws-actions/amazon-ecr-login@v2
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
 
-    #- name: Build, tag, and push image to Amazon ECR
-    #  id: build-image
-    #  env:
-    #    ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-    #    AWS_REGION: us-east-1                # set this to your preferred AWS region, e.g. us-west-1
-    #    ECR_REPOSITORY: poc-github           # set this to your Amazon ECR repository name
-    #    IMAGE_TAG: ${{ github.sha }}        
-    #  run: |
-        # Build a docker container and
-        # push it to ECR so that it can
-        # be deployed to ECS.
-    #    docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-    #    docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-    #    echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+      - name: Build, tag, and push image to Amazon ECR
+        id: build-image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          AWS_REGION: us-east-1 # set this to your preferred AWS region, e.g. us-west-1
+          ECR_REPOSITORY: poc-github # set this to your Amazon ECR repository name
+          IMAGE_TAG: ${{ gitHub.sha }} # SHA do commit
+
+        run: |
+
+          # Build a docker container and
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+
+          # push it to ECR so that it can
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+          # be deployed to ECS.
+          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
     #- name: Fill in the new image ID in the Amazon ECS task definition
     #  id: task-def
