--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -35,14 +35,30 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
+      - name: Get next version tag
+        id: version
+        run: |
+          # Busca a última tag da imagem no ECR e incrementa
+          REPO_NAME=poc-github
+          LAST_TAG=$(aws ecr describe-images --repository-name $REPO_NAME \
+            --query 'sort_by(imageDetails,& imagePushedAt)[-1].imageTags[0]' --output text 2>/dev/null || echo "v0.0.0")
+          PREFIX=v
+          VERSION=${LAST_TAG#$PREFIX}
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
+          PATCH=$((PATCH+1))
+          NEW_TAG="${PREFIX}${MAJOR}.${MINOR}.${PATCH}"
+          echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
+          echo "Next version: $NEW_TAG"
+
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           AWS_REGION: us-east-1 # set this to your preferred AWS region, e.g. us-west-1
           ECR_REPOSITORY: poc-github # set this to your Amazon ECR repository name
-          #IMAGE_TAG: ${{ gitHub.sha }} # 'tageia' com o SHA do commit
-          IMAGE_TAG: v0.0.1 # 'tageia' com versão v0.0.1 com o SHA do commit
+          #IMAGE_TAG: ${{ gitHub.sha }}   # tag com o SHA do commit
+          #IMAGE_TAG: v0.0.1              # tag com versão v0.0.1 com o SHA do commit
+          IMAGE_TAG: ${{ env.NEW_TAG }}   # tag automática
 
         run: |
 
