--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -23,8 +23,8 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::124355661462:role/github-actions-role
           aws-region: us-east-1
-      - name: Test AWS connection
-        run: aws sts get-caller-identity
+      #- name: Test AWS connection
+      #  run: aws sts get-caller-identity
 
       # Para configuração via secrets
       #  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
