--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -41,8 +41,8 @@ jobs:
           # Busca a última tag da imagem no ECR e incrementa
           REPO_NAME=poc-github
           LAST_TAG=$( (aws ecr describe-images --repository-name $REPO_NAME \
-            --query 'sort_by(imageDetails, &imagePushedAt)[-1].imageTags[0]' \
-            --output text 2>/dev/null) || echo "v0.0.0")
+                --query 'sort_by(imageDetails[?imageTags != `null`], &imagePushedAt)[-1].imageTags[0]' \
+                --output text 2>/dev/null) || echo "v0.0.0")
           PREFIX=v
           VERSION=${LAST_TAG#$PREFIX}
           IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
