--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -38,11 +38,11 @@ jobs:
       - name: Get next version tag
         id: version
         run: |
-          # Busca a última tag da imagem no ECR e incrementa
-          REPO_NAME=poc-github
-          LAST_TAG=$( (aws ecr describe-images --repository-name $REPO_NAME \
-                --query 'sort_by(imageDetails[?imageTags != `null`], &imagePushedAt)[-1].imageTags[0]' \
-                --output text 2>/dev/null) || echo "v0.0.0")
+
+          # Busca todas as tags válidas no ECR e obtém a última versão publicada
+          LAST_TAG=$(aws ecr describe-images --repository-name "$REPO_NAME" --region "$REGION" \
+            --query 'imageDetails[].imageTags[]' --output text | awk '{print $1}' \
+            | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | sort -V | tail -n 1)
           PREFIX=v
           VERSION=${LAST_TAG#$PREFIX}
           IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
