feat(tag): correction 5 to new tag

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -41,12 +41,12 @@ jobs:
           REPO_NAME=poc-github
           REGION=us-east-1
 
-          # Busca todas as tags válidas no ECR e obtém a última versão publicada
+          # Busca todas as tags válidas (vX.Y.Z) e pega a mais recente
           LAST_TAG=$(aws ecr describe-images --repository-name "$REPO_NAME" --region "$REGION" \
-            --query 'imageDetails[].imageTags[]' --output text | awk '{print $1}' \
-            | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | sort -V | tail -n 1)
+            --query "imageDetails[?imageTags != null].imageTags[]" --output json \
+            | jq -r '.[]' | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | sort -V | tail -n 1)
 
-          # Se não existir nenhuma tag, começa em v0.0.0
+          # Se não existir nenhuma tag, define v0.0.0
           if [ -z "$LAST_TAG" ]; then
             LAST_TAG="v0.0.0"
           fi
@@ -59,10 +59,6 @@ jobs:
           IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
           PATCH=$((PATCH+1))
           NEW_TAG="${PREFIX}${MAJOR}.${MINOR}.${PATCH}"
-
-          echo "Nova tag gerada: $NEW_TAG"
-          echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
-
 
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
