--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -39,27 +39,32 @@ jobs:
           REPO_NAME=poc-github
           REGION=us-east-1
 
-          echo "Buscando última tag válida no ECR..."
+          echo "Buscando última tag válida do ECR..."
 
-          # Busca todas as tags válidas (vX.Y.Z) e pega a mais recente
-          LAST_TAG=$(aws ecr describe-images --repository-name "$REPO_NAME" --region "$REGION" \
-            --query "imageDetails[?imageTags != null].imageTags[]" --output json \
-            | jq -r '.[]' | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | sort -V | tail -n 1)
+          # Força atualização do cache local do ECR
+          aws ecr describe-images --repository-name "$REPO_NAME" --region "$REGION" >/dev/null 2>&1 || true
 
-          if [ -z "$LAST_TAG" ]; then
-            LAST_TAG="v0.0.0"
+          # Captura todas as tags e seleciona apenas as no formato vX.Y.Z
+          TAGS=$(aws ecr describe-images --repository-name "$REPO_NAME" --region "$REGION" \
+            --query 'imageDetails[].imageTags[]' --output text 2>/dev/null | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' || true)
+
+          if [ -z "$TAGS" ]; then
+            echo "Nenhuma tag encontrada. Iniciando em v0.0.1"
+            NEW_TAG="v0.0.1"
+          else
+            LAST_TAG=$(echo "$TAGS" | sort -V | tail -n 1)
+            PREFIX=v
+            VERSION=${LAST_TAG#$PREFIX}
+            IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
+            PATCH=$((PATCH+1))
+            NEW_TAG="${PREFIX}${MAJOR}.${MINOR}.${PATCH}"
+            echo "Última tag encontrada: $LAST_TAG"
+            echo "Nova tag gerada: $NEW_TAG"
           fi
 
-          echo "Última tag encontrada: $LAST_TAG"
-
-          PREFIX=v
-          VERSION=${LAST_TAG#$PREFIX}
-          IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
-          PATCH=$((PATCH+1))
-          NEW_TAG="${PREFIX}${MAJOR}.${MINOR}.${PATCH}"
-
-          echo "Nova tag gerada: $NEW_TAG"
+          # Exporta variável para os próximos passos
           echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
+
 
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
