--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -24,19 +24,17 @@ jobs:
           role-to-assume: arn:aws:iam::124355661462:role/github-actions-role
           aws-region: us-east-1
 
+      # =========================================
+      # 🔐 Login no Amazon ECR
+      # =========================================
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Install jq
-        run: |
-          sudo apt-get update -y
-          sudo apt-get install -y jq
-
       # =========================================
-      # 🔢 Etapa para gerar automaticamente a próxima versão
+      # 🔢 Gerar automaticamente a próxima versão
       # =========================================
-      - name: Get next version tag
+      - name: Generate next version tag
         id: version
         run: |
           REPO_NAME="poc-github"
@@ -64,26 +62,28 @@ jobs:
 
           echo "🚀 Nova tag gerada: $NEW_TAG"
           echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
-      
-
+          echo "::set-output name=tag::$NEW_TAG"
 
       # =========================================
-      # 🐳 Build, tag e push da imagem para o ECR
+      # 🐳 Build, tag e push para o ECR
       # =========================================
-      - name: Build, tag, and push image to Amazon ECR
-        id: build-image
+      - name: Build and push Docker image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          AWS_REGION: us-east-1
           ECR_REPOSITORY: poc-github
+          AWS_REGION: us-east-1
+          IMAGE_TAG: ${{ steps.version.outputs.tag }}
         run: |
-          echo "🏗️  Construindo imagem Docker com a tag $NEW_TAG..."
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$NEW_TAG .
+          echo "🏗️  Construindo imagem: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
 
           echo "📤 Enviando imagem para o ECR..."
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$NEW_TAG
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
 
-          echo "✅ Imagem enviada: $ECR_REGISTRY/$ECR_REPOSITORY:$NEW_TAG"
+          echo "✅ Imagem enviada: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+
 
 
 
