feat(buildspec): configure buildspec.yaml

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -29,71 +29,79 @@ jobs:
           role-to-assume: arn:aws:iam::124355661462:role/github-actions-role
           aws-region: us-east-1
 
-      # =========================================
-      # 🔓 Etapa 3: Login no Amazon ECR
-      # =========================================
-      - name: Login no Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
 
-      # =========================================
-      # 🔢 Etapa 4: Gerar automaticamente a próxima versão
-      # =========================================
-      - name: Gerar próxima tag de versão
-        id: version
+      - name: Executar build no CodeBuild
         run: |
-          REPO_NAME="poc-github"
-          REGION="us-east-1"
-          echo "🔍 Buscando última tag válida no ECR ($REPO_NAME em $REGION)..."
+          aws codebuild start-build \
+            --project-name ppoc-git-hub \
+            --region us-east-1
 
-          TAGS=$(aws ecr describe-images \
-            --repository-name "$REPO_NAME" \
-            --region "$REGION" \
-            --query 'imageDetails[].imageTags' \
-            --output json | jq -r '.[]? | .[]? | select(test("^v[0-9]+\\.[0-9]+\\.[0-9]+$"))' | sort -V || true)
 
-          if [ -z "$TAGS" ]; then
-            echo "⚠️ Nenhuma tag encontrada — iniciando em v0.0.1"
-            NEW_TAG="v0.0.1"
-          else
-            LAST_TAG=$(echo "$TAGS" | tail -n 1)
-            echo "✅ Última tag encontrada: $LAST_TAG"
-            PREFIX="v"
-            VERSION=${LAST_TAG#$PREFIX}
-            IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
-            PATCH=$((PATCH+1))
-            NEW_TAG="${PREFIX}${MAJOR}.${MINOR}.${PATCH}"
-          fi
+      # # =========================================
+      # # 🔓 Etapa 3: Login no Amazon ECR
+      # # =========================================
+      # - name: Login no Amazon ECR
+      #   id: login-ecr
+      #   uses: aws-actions/amazon-ecr-login@v2
 
-          echo "🚀 Nova tag gerada: $NEW_TAG"
-          echo "NEW_TAG=$NEW_TAG" >> tag.env
+      # # =========================================
+      # # 🔢 Etapa 4: Gerar automaticamente a próxima versão
+      # # =========================================
+      # - name: Gerar próxima tag de versão
+      #   id: version
+      #   run: |
+      #     REPO_NAME="poc-github"
+      #     REGION="us-east-1"
+      #     echo "🔍 Buscando última tag válida no ECR ($REPO_NAME em $REGION)..."
 
-      # =========================================
-      # 💾 Etapa 5: Carregar a tag gerada no ambiente
-      # =========================================
-      - name: Carregar tag gerada
-        run: |
-          source tag.env
-          echo "📦 Usando tag: $NEW_TAG"
-          echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
+      #     TAGS=$(aws ecr describe-images \
+      #       --repository-name "$REPO_NAME" \
+      #       --region "$REGION" \
+      #       --query 'imageDetails[].imageTags' \
+      #       --output json | jq -r '.[]? | .[]? | select(test("^v[0-9]+\\.[0-9]+\\.[0-9]+$"))' | sort -V || true)
 
-      # =========================================
-      # 🐳 Etapa 6: Build e Push da imagem Docker
-      # =========================================
-      - name: Build e Push da imagem Docker
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: poc-github
-        run: |
-          echo "🏗️  Construindo imagem: $ECR_REGISTRY/$ECR_REPOSITORY:$NEW_TAG"
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$NEW_TAG .
-          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$NEW_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
+      #     if [ -z "$TAGS" ]; then
+      #       echo "⚠️ Nenhuma tag encontrada — iniciando em v0.0.1"
+      #       NEW_TAG="v0.0.1"
+      #     else
+      #       LAST_TAG=$(echo "$TAGS" | tail -n 1)
+      #       echo "✅ Última tag encontrada: $LAST_TAG"
+      #       PREFIX="v"
+      #       VERSION=${LAST_TAG#$PREFIX}
+      #       IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
+      #       PATCH=$((PATCH+1))
+      #       NEW_TAG="${PREFIX}${MAJOR}.${MINOR}.${PATCH}"
+      #     fi
 
-          echo "📤 Fazendo push da imagem..."
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$NEW_TAG
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+      #     echo "🚀 Nova tag gerada: $NEW_TAG"
+      #     echo "NEW_TAG=$NEW_TAG" >> tag.env
 
-          echo "✅ Imagem enviada com sucesso!"
+      # # =========================================
+      # # 💾 Etapa 5: Carregar a tag gerada no ambiente
+      # # =========================================
+      # - name: Carregar tag gerada
+      #   run: |
+      #     source tag.env
+      #     echo "📦 Usando tag: $NEW_TAG"
+      #     echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
+
+      # # =========================================
+      # # 🐳 Etapa 6: Build e Push da imagem Docker
+      # # =========================================
+      # - name: Build e Push da imagem Docker
+      #   env:
+      #     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      #     ECR_REPOSITORY: poc-github
+      #   run: |
+      #     echo "🏗️  Construindo imagem: $ECR_REGISTRY/$ECR_REPOSITORY:$NEW_TAG"
+      #     docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$NEW_TAG .
+      #     docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$NEW_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
+
+      #     echo "📤 Fazendo push da imagem..."
+      #     docker push $ECR_REGISTRY/$ECR_REPOSITORY:$NEW_TAG
+      #     docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+
+      #     echo "✅ Imagem enviada com sucesso!"
 
 
     #- name: Fill in the new image ID in the Amazon ECS task definition
@@ -111,3 +119,5 @@ jobs:
     #    service: ${{ env.ECS_SERVICE }}
     #    cluster: ${{ env.ECS_CLUSTER }}
     #    wait-for-service-stability: true
+
+
