feat(buildspec): configure 7buildspec.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -69,7 +69,7 @@ phases:
       - docker push "${ECR_URI}:latest"
       - echo "✅ Imagem enviada com sucesso!"
       - echo "🔖 Tag final: ${TAG_FINAL}"
-      - echo "IMAGE_URI=${ECR_URI}:${TAG_FINAL}" >> build.env
+      - echo "IMAGE_URI=${ECR_URI}:${TAG_FINAL} >> build.env"
 
 artifacts:
   files:
