--- a/buildspec.yml
+++ b/buildspec.yml
@@ -29,29 +29,23 @@ phases:
       - aws ecr get-login-password --region "$REGION" | docker login --username AWS --password-stdin "${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com"
 
       - echo "🔍 Buscando última tag válida no ECR (${REPO_NAME})..."
+      - TAGS=$(aws ecr describe-images --repository-name "$REPO_NAME" --region "$REGION" --query 'imageDetails[].imageTags' --output json 2>/dev/null | jq -r '.[]? | .[]? | select(test("^v[0-9]+\\.[0-9]+\\.[0-9]+$"))' | sort -V || true)
       - |
-          TAGS=$(aws ecr describe-images \
-            --repository-name "$REPO_NAME" \
-            --region "$REGION" \
-            --query 'imageDetails[].imageTags' \
-            --output json 2>/dev/null | jq -r '.[]? | .[]? | select(test("^v[0-9]+\\.[0-9]+\\.[0-9]+$"))' | sort -V || true)
-
-          if [ -z "$TAGS" ]; then
-            echo "⚠️ Nenhuma tag encontrada — iniciando em v0.0.1"
-            NEW_TAG="v0.0.1"
-          else
-            LAST_TAG=$(echo "$TAGS" | tail -n 1)
-            echo "✅ Última tag encontrada: $LAST_TAG"
-            PREFIX="v"
-            VERSION=${LAST_TAG#$PREFIX}
-            IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
-            PATCH=$((PATCH+1))
-            NEW_TAG="${PREFIX}${MAJOR}.${MINOR}.${PATCH}"
-          fi
-
-          echo "🚀 Nova tag gerada: $NEW_TAG"
-          echo "TAG_FINAL=$NEW_TAG" >> build.env
-          echo "ECR_URI=$ECR_URI" >> build.env
+        if [ -z "$TAGS" ]; then
+          echo "⚠️ Nenhuma tag encontrada — iniciando em v0.0.1"
+          NEW_TAG="v0.0.1"
+        else
+          LAST_TAG=$(echo "$TAGS" | tail -n 1)
+          echo "✅ Última tag encontrada: $LAST_TAG"
+          PREFIX="v"
+          VERSION=${LAST_TAG#$PREFIX}
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
+          PATCH=$((PATCH+1))
+          NEW_TAG="${PREFIX}${MAJOR}.${MINOR}.${PATCH}"
+        fi
+      - echo "🚀 Nova tag gerada: $NEW_TAG"
+      - echo "TAG_FINAL=$NEW_TAG" >> build.env
+      - echo "ECR_URI=$ECR_URI" >> build.env
 
   build:
     commands:
