--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,13 +1,3 @@
-# ===============================================================
-# buildspec.yml - Automação de Build e Push para Amazon ECR
-# ===============================================================
-# 1️⃣ Faz login no ECR
-# 2️⃣ Busca a última tag vX.Y.Z
-# 3️⃣ Incrementa a versão (ex: v0.0.1 → v0.0.2)
-# 4️⃣ Builda a imagem Docker
-# 5️⃣ Faz push com a nova tag e também com 'latest'
-# ===============================================================
-
 version: 0.2
 
 env:
@@ -27,12 +17,23 @@ phases:
       - ACCOUNT_ID=$(aws sts get-caller-identity --query "Account" --output text)
       - ECR_URI="${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/${REPO_NAME}"
       - aws ecr get-login-password --region "$REGION" | docker login --username AWS --password-stdin "${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com"
-      - echo "🔍 Buscando última tag válida no ECR (${REPO_NAME})..."
-      - TAGS=$(aws ecr describe-images --repository-name "$REPO_NAME" --region "$REGION" --query 'imageDetails[].imageTags' --output json 2>/dev/null | jq -r '.[]? | .[]? | select(test("^v[0-9]+\\.[0-9]+\\.[0-9]+$"))' | sort -V || true)
-      - "if [ -z \"$TAGS\" ]; then NEW_TAG=\"v0.0.1\"; echo \"⚠️ Nenhuma tag encontrada — iniciando em v0.0.1\"; else LAST_TAG=$(echo \"$TAGS\" | tail -n 1); echo \"✅ Última tag encontrada: $LAST_TAG\"; VERSION=${LAST_TAG#v}; IFS=\".\" read -r MAJOR MINOR PATCH <<< \"$VERSION\"; PATCH=$((PATCH+1)); NEW_TAG=\"v${MAJOR}.${MINOR}.${PATCH}\"; fi"
-      - echo "🚀 Nova tag gerada: $NEW_TAG"
-      - echo "TAG_FINAL=$NEW_TAG" >> build.env
-      - echo "ECR_URI=$ECR_URI" >> build.env
+      - echo "🔍 Buscando última tag válida no ECR..."
+      - TAGS=$(aws ecr describe-images --repository-name "$REPO_NAME" --region "$REGION" --query 'imageDetails[].imageTags' --output json 2>/dev/null | jq -r '.[]? | .[]? | select(test("^v[0-9]+\\.[0-9]+\\.[0-9]+$"))' | sort -V || echo "")
+      - |
+        if [ -z "$TAGS" ]; then
+          echo "⚠️ Nenhuma tag encontrada — iniciando em v0.0.1"
+          NEW_TAG="v0.0.1"
+        else
+          LAST_TAG=$(echo "$TAGS" | tail -n 1)
+          echo "✅ Última tag encontrada: $LAST_TAG"
+          VERSION=${LAST_TAG#v}
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
+          PATCH=$((PATCH+1))
+          NEW_TAG="v${MAJOR}.${MINOR}.${PATCH}"
+        fi
+        echo "🚀 Nova tag gerada: $NEW_TAG"
+        echo "TAG_FINAL=$NEW_TAG" >> build.env
+        echo "ECR_URI=$ECR_URI" >> build.env
 
   build:
     commands:
