feat(buildspec): configure 14  buildspec.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,36 +8,36 @@ env:
 phases:
   install:
     commands:
-      - echo "🧩 Fase de instalação inicial..."
+      - echo "Fase de instalação inicial..."
       - yum install -y jq
 
   pre_build:
     commands:
-      - echo "🔐 Fazendo login no Amazon ECR..."
+      - echo "Fazendo login no Amazon ECR..."
       - ACCOUNT_ID=$(aws sts get-caller-identity --query "Account" --output text)
       - ECR_URI="${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/${REPO_NAME}"
       - aws ecr get-login-password --region "$REGION" | docker login --username AWS --password-stdin "${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com"
-      - echo "🔍 Buscando última tag válida no ECR..."
+      - echo "Buscando última tag válida no ECR..."
       - TAGS=$(aws ecr describe-images --repository-name "$REPO_NAME" --region "$REGION" --query 'imageDetails[].imageTags' --output json 2>/dev/null | jq -r '.[]? | .[]? | select(test("^v[0-9]+\\.[0-9]+\\.[0-9]+$"))' | sort -V || echo "")
       - |
         if [ -z "$TAGS" ]; then
-          echo "⚠️ Nenhuma tag encontrada — iniciando em v0.0.1"
+          echo "Nenhuma tag encontrada — iniciando em v0.0.1"
           NEW_TAG="v0.0.1"
         else
           LAST_TAG=$(echo "$TAGS" | tail -n 1)
-          echo "✅ Última tag encontrada: $LAST_TAG"
+          echo "Última tag encontrada: $LAST_TAG"
           VERSION=${LAST_TAG#v}
           IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
           PATCH=$((PATCH+1))
           NEW_TAG="v${MAJOR}.${MINOR}.${PATCH}"
         fi
-        echo "🚀 Nova tag gerada: $NEW_TAG"
+        echo "Nova tag gerada: $NEW_TAG"
         echo "TAG_FINAL=$NEW_TAG" >> build.env
         echo "ECR_URI=$ECR_URI" >> build.env
 
   build:
     commands:
-      - echo "🏗️ Construindo imagem Docker..."
+      - echo "Construindo imagem Docker..."
       - source build.env
       - echo "Imagem: ${ECR_URI}:${TAG_FINAL}"
       - docker build -t "${ECR_URI}:${TAG_FINAL}" .
@@ -45,12 +45,12 @@ phases:
 
   post_build:
     commands:
-      - echo "📤 Enviando imagem para o ECR..."
+      - echo "Enviando imagem para o ECR..."
       - source build.env
       - docker push "${ECR_URI}:${TAG_FINAL}"
       - docker push "${ECR_URI}:latest"
-      - echo "✅ Imagem enviada com sucesso!"
-      - echo "🔖 Tag final: ${TAG_FINAL}"
+      - echo "Imagem enviada com sucesso!"
+      - echo "Tag final: ${TAG_FINAL}"
       - echo "IMAGE_URI=${ECR_URI}:${TAG_FINAL}" >> build.env
 
 artifacts:
