--- a/buildspec.yml
+++ b/buildspec.yml
@@ -37,21 +37,21 @@ phases:
 
   build:
     commands:
-      - echo "Construindo imagem Docker..."
-      - source build.env
-      - echo "Imagem: ${ECR_URI}:${TAG_FINAL}"
-      - docker build -t "${ECR_URI}:${TAG_FINAL}" .
-      - docker tag "${ECR_URI}:${TAG_FINAL}" "${ECR_URI}:latest"
+      - "echo 'Construindo imagem Docker...'"
+      - "source build.env"
+      - "echo Imagem: ${ECR_URI}:${TAG_FINAL}"
+      - "docker build -t ${ECR_URI}:${TAG_FINAL} ."
+      - "docker tag ${ECR_URI}:${TAG_FINAL} ${ECR_URI}:latest"
 
   post_build:
     commands:
-      - echo "Enviando imagem para o ECR..."
-      - source build.env
-      - docker push "${ECR_URI}:${TAG_FINAL}"
-      - docker push "${ECR_URI}:latest"
-      - echo "Imagem enviada com sucesso!"
-      - echo "Tag final: ${TAG_FINAL}"
-      - echo "IMAGE_URI=${ECR_URI}:${TAG_FINAL}" >> build.env
+      - "echo 'Enviando imagem para o ECR...'"
+      - "source build.env"
+      - "docker push ${ECR_URI}:${TAG_FINAL}"
+      - "docker push ${ECR_URI}:latest"
+      - "echo 'Imagem enviada com sucesso!'"
+      - "echo 'Tag final: ${TAG_FINAL}'"
+      - "echo IMAGE_URI=${ECR_URI}:${TAG_FINAL} >> build.env"
 
 artifacts:
   files:
