--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,11 +16,14 @@ phases:
       - echo "Fazendo login no Amazon ECR..."
       - ACCOUNT_ID=$(aws sts get-caller-identity --query "Account" --output text)
       - ECR_URI="${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/${REPO_NAME}"
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 124355661462.dkr.ecr.us-east-1.amazonaws.com
-      #- aws ecr get-login-password --region "$REGION" | docker login --username AWS --password-stdin "${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com"
+      - echo "ECR_URI: ${ECR_URI}"
+
+      # Login no ECR
+      - aws ecr get-login-password --region "${REGION}" | docker login --username AWS --password-stdin "${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com"
+
+      # Buscar última tag existente no ECR
       - echo "Buscando última tag válida no ECR..."
-      - docker tag poc-github:latest 124355661462.dkr.ecr.us-east-1.amazonaws.com/poc-github:latest
-      #- TAGS=$(aws ecr describe-images --repository-name "$REPO_NAME" --region "$REGION" --query 'imageDetails[].imageTags' --output json 2>/dev/null | jq -r '.[]? | .[]? | select(test("^v[0-9]+\\.[0-9]+\\.[0-9]+$"))' | sort -V || echo "")
+      - TAGS=$(aws ecr describe-images --repository-name "${REPO_NAME}" --region "${REGION}" --query 'imageDetails[].imageTags' --output json 2>/dev/null | jq -r '.[]? | .[]? | select(test("^v[0-9]+\\.[0-9]+\\.[0-9]+$"))' | sort -V || echo "")
       - |
         if [ -z "$TAGS" ]; then
           echo "Nenhuma tag encontrada — iniciando em v0.0.1"
@@ -33,27 +36,27 @@ phases:
           PATCH=$((PATCH+1))
           NEW_TAG="v${MAJOR}.${MINOR}.${PATCH}"
         fi
+
         echo "Nova tag gerada: $NEW_TAG"
         echo "TAG_FINAL=$NEW_TAG" >> build.env
         echo "ECR_URI=$ECR_URI" >> build.env
 
   build:
     commands:
-      - "echo 'Construindo imagem Docker...'"
-      - "source build.env"
-      - "echo Imagem: ${ECR_URI}:${TAG_FINAL}"
-      - "docker build -t ${ECR_URI}:${TAG_FINAL} ."
-      - "docker tag ${ECR_URI}:${TAG_FINAL} ${ECR_URI}:latest"
+      - echo "Construindo imagem Docker..."
+      - source build.env
+      - echo "Imagem final: ${ECR_URI}:${TAG_FINAL}"
+      - docker build -t "${ECR_URI}:${TAG_FINAL}" .
+      - docker tag "${ECR_URI}:${TAG_FINAL}" "${ECR_URI}:latest"
 
   post_build:
     commands:
-      - "echo 'Enviando imagem para o ECR...'"
-      - "source build.env"
-      - "docker push ${ECR_URI}:${TAG_FINAL}"
-      - "docker push ${ECR_URI}:latest"
-      - "echo 'Imagem enviada com sucesso!'"
-      - "echo 'Tag final: ${TAG_FINAL}'"
-      - "echo IMAGE_URI=${ECR_URI}:${TAG_FINAL} >> build.env"
+      - echo "Enviando imagem para o ECR..."
+      - source build.env
+      - docker push "${ECR_URI}:${TAG_FINAL}"
+      - docker push "${ECR_URI}:latest"
+      - echo "Imagem enviada com sucesso!"
+      - echo "IMAGE_URI=${ECR_URI}:${TAG_FINAL}" >> build.env
 
 artifacts:
   files:
