--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,7 @@ phases:
       - echo "Fazendo login no Amazon ECR..."
       - ACCOUNT_ID=$(aws sts get-caller-identity --query "Account" --output text)
       - ECR_URI="${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/${REPO_NAME}"
-      - echo "ECR_URI: ${ECR_URI}"
+      - "echo ECR_URI: ${ECR_URI}"
 
       # Login no ECR
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 124355661462.dkr.ecr.us-east-1.amazonaws.com
