--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,10 +16,10 @@ phases:
       - echo "Fazendo login no Amazon ECR..."
       - ACCOUNT_ID=$(aws sts get-caller-identity --query "Account" --output text)
       - ECR_URI="${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/${REPO_NAME}"
-      - echo "ECR_URI: ${ECR_URI}"
+      - "echo ECR_URI: ${ECR_URI}"
 
       # Login no ECR
-      - aws ecr get-login-password --region ${REGION} | docker login --username AWS --password-stdin ${ECR_URI}
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 124355661462.dkr.ecr.us-east-1.amazonaws.com
 
       # Baixar a última imagem (para poder retaggear)
       - echo "Baixando imagem existente (latest)..."
@@ -29,18 +29,10 @@ phases:
       - echo "Buildando imagem localmente..."
       - docker build -t ${REPO_NAME}:latest .
 
-      # Aplicar tag local da imagem para envio ao ECR
-      - echo "Aplicando tag 'latest' para o ECR..."
-      - docker tag ${REPO_NAME}:latest ${ECR_URI}:latest
-
       # Buscar última tag existente no ECR
       - echo "Buscando última tag válida no ECR..."
-      - TAGS=$(aws ecr describe-images \
-          --repository-name "${REPO_NAME}" \
-          --region "${REGION}" \
-          --query 'imageDetails[].imageTags' \
-          --output json 2>/dev/null | jq -r '.[]? | .[]? | select(test("^v[0-9]+\\.[0-9]+\\.[0-9]+$"))' | sort -V)
-
+      - docker tag poc-github:latest 124355661462.dkr.ecr.us-east-1.amazonaws.com/poc-github:latest
+      #- TAGS=$(aws ecr describe-images --repository-name "${REPO_NAME}" --region "${REGION}" --query 'imageDetails[].imageTags' --output json 2>/dev/null | jq -r '.[]? | .[]? | select(test("^v[0-9]+\\.[0-9]+\\.[0-9]+$"))' | sort -V || echo "")
       - |
         if [ -z "$TAGS" ]; then
           echo "Nenhuma tag encontrada — iniciando em v0.0.1"
@@ -55,9 +47,8 @@ phases:
         fi
 
         echo "Nova tag gerada: $NEW_TAG"
-        echo "TAG_FINAL=$NEW_TAG" > build.env
+        echo "TAG_FINAL=$NEW_TAG" >> build.env
         echo "ECR_URI=$ECR_URI" >> build.env
-
 
   build:
     commands:
