--- a/buildspec.yml
+++ b/buildspec.yml
@@ -47,13 +47,14 @@ phases:
         fi
 
         echo "Nova tag gerada: $NEW_TAG"
-        echo "TAG_FINAL=$NEW_TAG" >> build.env
-        echo "ECR_URI=$ECR_URI" >> build.env
+        echo "TAG_FINAL=$NEW_TAG" >> $CODEBUILD_SRC_DIR/build.env
+        echo "ECR_URI=$ECR_URI" >> $CODEBUILD_SRC_DIR/build.env
+      #- "source build.env"
 
   build:
     commands:
       - "echo 'Construindo imagem Docker...'"
-      - "source build.env"
+      - "source $CODEBUILD_SRC_DIR/build.env"
       - "echo Imagem final: ${ECR_URI}:${TAG_FINAL}"
       - "docker build -t ${ECR_URI}:${TAG_FINAL} ."
       - "docker tag ${ECR_URI}:${TAG_FINAL} ${ECR_URI}:latest"
